# asteroids

./: .gitignore  Asteroid.h  CMakeLists.txt  README.md  Shape.cpp  commonstuff.h  mainAsteroids.cpp  makefile
Asteroids/: Asteroids.cbp  Asteroids.slnx  Asteroids.vcxproj  Asteroids.vcxproj.filters
Asteroids/Asteroids/Debug/: Asteroids.exe.recipe  vc145.idb
Asteroids/Asteroids/Debug/Asteroids.tlog/: Asteroids.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Flame.cpp  Flame.h  OVNI.cpp  OVNI.h  ObjectsList.cpp  ObjectsList.h  Ovni.cpp  Ovni.h  Shape.cpp  Shape.h  Ship.cpp  Ship.h  commonstuff.h  mainAsteroids.cpp  makefile
